Complementando o arquivo index com links para cada pessoa na lista, e link de acesso ao Google

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
@@ -1,16 +1,81 @@
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <title>HTML</title>
-    </head>
-    <body>
-        <h1>Exercícios</h1>
-        <ul>
-            <li>Amanda Sottani Nascimento</li>
-            <li>Victor Calidor Carvalho</li>
-            <li>Bruno Melo</li>
-        </ul>
-        <img src="https://thumbs.dreamstime.com/z/texto-vermelho-do-selo-do-exemplo-43363006.jpg" alt="Carimbo vermelho escrito 'EXAMPLE'" width=300px>
-        <img src="Xiao-mask.jpg" alt="Máscara de teatro chinês" width=300px>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>HTML</title>
+  </head>
+  <body>
+    <h1>Exercícios</h1>
+    <ul>
+      <li><a href="#Amanda">Amanda</a></li>
+      <li><a href="#Victor">Victor</a></li>
+      <li><a href="#Bruno">Bruno</a></li>
+    </ul>
+    <img
+      src="https://thumbs.dreamstime.com/z/texto-vermelho-do-selo-do-exemplo-43363006.jpg"
+      alt="Carimbo vermelho escrito 'EXAMPLE'"
+      width="300px"
+    />
+    <img src="Xiao-mask.jpg" alt="Máscara de teatro chinês" width="300px" />
+    <p id="Amanda">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
+      aliquam lectus at risus varius, at scelerisque diam venenatis.
+      Pellentesque pellentesque nec nulla eu interdum. Ut convallis mi eros, nec
+      vehicula justo venenatis ac. Vivamus fermentum leo urna, in laoreet erat
+      euismod at. Sed lobortis tellus a sodales sodales. Phasellus ut lectus
+      quis massa semper efficitur at vitae sapien. Integer erat mi, maximus in
+      facilisis id, pharetra eu nisi. Morbi euismod est et placerat volutpat.
+      Nulla diam libero, egestas rhoncus arcu in, egestas rhoncus felis. Duis
+      fringilla tincidunt ante non fermentum. Morbi quis tortor ut lectus
+      ullamcorper ullamcorper tristique vel quam. Vestibulum urna nibh, congue
+      pretium ultricies nec, tempor non nulla. Aenean viverra tincidunt lacinia.
+      Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+      inceptos himenaeos. Praesent vitae quam vel dolor varius bibendum. Nullam
+      facilisis massa eros, vitae ullamcorper dui imperdiet non. Sed ut sapien
+      vel est tempus ullamcorper. Aenean sed imperdiet massa. Curabitur nunc
+      velit, eleifend id est sit amet, porttitor tincidunt sapien. Donec
+      pellentesque nec massa non efficitur. Nullam venenatis purus ut molestie
+      consequat.
+    </p>
+    <p id="Victor">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
+      aliquam lectus at risus varius, at scelerisque diam venenatis.
+      Pellentesque pellentesque nec nulla eu interdum. Ut convallis mi eros, nec
+      vehicula justo venenatis ac. Vivamus fermentum leo urna, in laoreet erat
+      euismod at. Sed lobortis tellus a sodales sodales. Phasellus ut lectus
+      quis massa semper efficitur at vitae sapien. Integer erat mi, maximus in
+      facilisis id, pharetra eu nisi. Morbi euismod est et placerat volutpat.
+      Nulla diam libero, egestas rhoncus arcu in, egestas rhoncus felis. Duis
+      fringilla tincidunt ante non fermentum. Morbi quis tortor ut lectus
+      ullamcorper ullamcorper tristique vel quam. Vestibulum urna nibh, congue
+      pretium ultricies nec, tempor non nulla. Aenean viverra tincidunt lacinia.
+      Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+      inceptos himenaeos. Praesent vitae quam vel dolor varius bibendum. Nullam
+      facilisis massa eros, vitae ullamcorper dui imperdiet non. Sed ut sapien
+      vel est tempus ullamcorper. Aenean sed imperdiet massa. Curabitur nunc
+      velit, eleifend id est sit amet, porttitor tincidunt sapien. Donec
+      pellentesque nec massa non efficitur. Nullam venenatis purus ut molestie
+      consequat.
+    </p>
+    <p id="Bruno">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
+      aliquam lectus at risus varius, at scelerisque diam venenatis.
+      Pellentesque pellentesque nec nulla eu interdum. Ut convallis mi eros, nec
+      vehicula justo venenatis ac. Vivamus fermentum leo urna, in laoreet erat
+      euismod at. Sed lobortis tellus a sodales sodales. Phasellus ut lectus
+      quis massa semper efficitur at vitae sapien. Integer erat mi, maximus in
+      facilisis id, pharetra eu nisi. Morbi euismod est et placerat volutpat.
+      Nulla diam libero, egestas rhoncus arcu in, egestas rhoncus felis. Duis
+      fringilla tincidunt ante non fermentum. Morbi quis tortor ut lectus
+      ullamcorper ullamcorper tristique vel quam. Vestibulum urna nibh, congue
+      pretium ultricies nec, tempor non nulla. Aenean viverra tincidunt lacinia.
+      Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+      inceptos himenaeos. Praesent vitae quam vel dolor varius bibendum. Nullam
+      facilisis massa eros, vitae ullamcorper dui imperdiet non. Sed ut sapien
+      vel est tempus ullamcorper. Aenean sed imperdiet massa. Curabitur nunc
+      velit, eleifend id est sit amet, porttitor tincidunt sapien. Donec
+      pellentesque nec massa non efficitur. Nullam venenatis purus ut molestie
+      consequat.
+    </p>
+    <a href="https://www.google.com/">Pesquisar no Google!</a>
+  </body>
 </html>
