--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>HTML</title>
     <style>
-        h1 {
-            font-size: 65px;
-            color: orange;
-        }
-
-        ul {
-            background-color: gray;
-        }
-
-        .modified {
-            background-color:darkolivegreen;
-        }
+      h1 {
+        font-family: sans-serif;
+      }
+      p {
+        font-weight: 600;
+        font-size: 3em;
+      }
+      body {
+        font-size: 16px;
+        font-style: oblique;
+        line-height: 50px;
+        text-align: center;
+        text-decoration: underline;
+      }
+      #amarelo {
+        background-color: yellow;
+      }
+      #vermelho {
+        background-color: red;
+      }
+      #marrom {
+        background-color: brown;
+      }
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
-    <p class="modified">Qual é a sua cor favorita?</p>
-    <ul class="modified">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+    <p>Qual é a sua cor favorita?</p>
+    <ul>
+      <li id="amarelo">Amarelo</li>
+      <li id="vermelho">Vermelho</li>
+      <li id="marrom">Marrom</li>
     </ul>
   </body>
 </html>
