--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/exercício/form.html
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/exercício/form.html
@@ -5,43 +5,58 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="bootstrap-5.1.1-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css">
+  <script src="https://cdn.jsdelivr.net/npm/pikaday/pikaday.js"></script>
+  <script src="jquery-3.6.0.min.js"></script>
+  <script src="bootstrap-5.1.1-dist/js/bootstrap.min.js"></script>
   <title>Formulário de fixação | Trybe</title>
 </head>
 <body>
-  <h1>Formulário de fixação - Bloco 6.1</h1>
+  <h1 class="display-4 text-muted">Formulário de fixação - Bloco 6.1</h1>
   <form action="#" method="get">
   <fieldset id="basicData">
     <label for="name">Insira seu nome:
-      <input type="text" maxlength="40" id="name" required>
+      <input class="form-control" type="text" maxlength="40" id="name" required>
     </label><br>
     <label for="email">Insira seu email:
-      <input type="text" maxlength="50" id="email" required>
+      <input class="form-control" type="text" maxlength="50" id="email" required>
     </label><br>
     <label for="cpf">Insira seu CPF (apenas números):
-      <input type="text" maxlength="11" id="cpf" required>
+      <input class="form-control" type="text" maxlength="11" id="cpf" required>
     </label><br>
     <label for="endereco">Insira seu endereço:
-      <input type="text" maxlength="200" id="endereco" required>
+      <input class="form-control" type="text" maxlength="200" id="endereco" required>
     </label><br>
     <label for="cidade">Insira a cidade:
-      <input type="text" maxlength="28" id="cidade" required>
+      <input class="form-control" type="text" maxlength="28" id="cidade" required>
     </label><br>
-    <label for="estado">Estado: <select name="estado" id="estado" required></select></label><br>
+    <label for="estado">Estado: <select class="form-control" name="estado" id="estado" required></select></label><br>
     <label for="casa"><input type="radio" name="tipoCasa" id="casa" selected>Casa</label>
     <label for="apartamento"><input type="radio" name="tipoCasa" id="apartamento">Apartamento</label>
   </fieldset>
   <fieldset id="lastJob">
     <legend>Currículo</legend>
     <label for="curriculum">Resumo do Currículo</label><br>
-    <textarea name="curriculum" id="curriculum" cols="90" rows="10" maxlength="1000" required></textarea>
+    <textarea class="form-control" name="curriculum" id="curriculum" cols="90" rows="10" maxlength="1000" required></textarea><br>
     <label for="cargo">Último cargo:
-      <input type="text" maxlength="40" id="cargo" required>
+      <input class="form-control" type="text" maxlength="40" id="cargo" required>
     </label><br>
     <label for="description">Descrição do cargo:
-      <input type="text" maxlength="500" id="description" required>
-    </label><br>
-  </fieldset>
-  <button type="submit" id="submit">Enviar</button>
+      <input class="form-control" type="text" maxlength="500" id="description" required>
+    </label><br><br>
+    <div class="data">
+      <!-- <label for="dia">Dia: </label>
+      <input type="text" name="dia" id="dia">
+      <label for="mes">Mês: </label>
+      <input type="text" name="mes" id="mes">
+      <label for="ano">Ano: </label>
+      <input type="text" name="ano" id="ano"> -->
+      <label for="data">Data de início</label>
+      <input type="text" name="data" id="datepicker">
+    </div>
+  </fieldset><br>
+  <button class="btn btn-success" type="submit" id="submit">Enviar Formulário</button>
 </form>
   <script src="script.js"></script>
 </body>
